<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".view.UpdateNoteActivity">

    <!-- Text View for "Add Note" in the left top corner -->
    <TextView
        android:id="@+id/textViewUpdateNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/update_note"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ImageView for "Add" in the right top corner -->
    <ImageView
        android:id="@+id/updatebutton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_save"
        app:tint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <!-- EditText for entering the title -->
    <EditText
        android:id="@+id/editTextUpdateTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_the_title"
        android:background="@drawable/orange_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpdateNote"
        android:padding="16dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:importantForAutofill="no"
        android:inputType="text"
        android:fontFamily="@font/poppins"
        />

    <!-- EditText for entering the description -->
    <EditText
        android:id="@+id/editTextUpdateContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/orange_border"
        android:hint="@string/enter_the_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpdateTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        android:gravity="top"
        android:fontFamily="@font/poppins"
        android:importantForAutofill="no"
        android:inputType="text" />

</androidx.constraintlayout.widget.ConstraintLayout>
